--- a/src/app/pagehome.scss
+++ b/src/app/pagehome.scss
@@ -50,3 +50,73 @@ $dark: #1e1c2a;
     width: 100%;
 }
 
+.vantagens-title{
+    text-align: center;
+}
+
+.vantagens-title span{
+    font-size: 1rem;
+    font-weight: 600;
+    color: $blue;
+}
+
+.vantagens-title h2{
+    font-size: 2rem;
+    color: $orange;
+}
+
+.vantagens-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-top: 5rem;
+    padding: 10px 100px;
+}
+
+.vantagens-container .box{
+    flex: 1 1 10rem;
+    background: #EC8F5E;
+    padding: 20px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+    border-radius: 0.5rem;
+    gap: 6px;
+    transition: transform 0.3s ease; 
+
+  &:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); 
+  }
+}
+
+.vantagens-container .box .box-img{
+    width: 150px;
+    height: 150px;
+    margin-top: -100px;
+}
+
+.vantagens-container .box .box-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.vantagens-container .box h3{
+    color: $white;
+    font-size: 1.6rem;
+    font-weight: bold;
+    padding: 15px;
+    border: 1px solid;
+    border-radius: 30px;
+}
+
+.vantagens-container .box p{
+    color: $white;
+    font-size: 1.5em;
+}
+
+
