--- a/src/app/sobre/sobre.scss
+++ b/src/app/sobre/sobre.scss
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@500&display=swap');
+
 
 $orange: #FF5C00;
 $orange-light: #EC8F5E;
 $blue:#183E9F;
 $white: white;
 $dark: #1e1c2a;
+$font-poppins:'Poppins', sans-serif;
+$font-montserrat: 'Montserrat', sans-serif;
 
 .sobre{
     margin-top: 3rem;
@@ -27,12 +31,14 @@ $dark: #1e1c2a;
     margin: 1.6rem 0 2.5rem;
     text-align: center;
     font-size: 3rem;
+    font-family: $font-poppins;
     
 }
 
 .sobre-text > p{
     margin: 1.6rem 0 2.5rem;
     text-align: center;
+    font-family: $font-montserrat;
 }
 
 .destaques{
@@ -69,3 +75,33 @@ $dark: #1e1c2a;
 }
 
 
+/*Responsividade*/
+/*Tablets*/
+
+@media screen and (max-width: 1024px){
+    .sobre{
+        margin-top: 2rem;
+    }
+
+    .sobre-container{
+        
+        flex-direction: column;
+        gap: 4rem;
+    }
+
+    .sobre-img{
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+/*Smartphones*/
+@media screen and (max-width: 600px){
+
+    .destaques-card{
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+
+
+}
