--- a/src/app/solucao/solucao.scss
+++ b/src/app/solucao/solucao.scss
@@ -4,23 +4,27 @@ $orange: #FF5C00;
 $orange-light: #EC8F5E;
 $blue:#183E9F;
 $white: white;
+$white-light: #dedede;
 $dark: #1e1c2a;
 $font-poppins:'Poppins', sans-serif;
 $font-montserrat: 'Montserrat', sans-serif;
 
 .solucao{
     margin-top: 3rem;
+    
 }
 
 .solucao-container{
     display: flex;
     gap: 8rem;
     align-items: center;
+    justify-content: space-between;
 }
 .solucao-img{
-    width: 40%;
+    width: 35%;
     justify-self: center;
 }
+
 
 .solucao-text > p{
     font-size: 1.2em;
@@ -59,4 +63,92 @@ $font-montserrat: 'Montserrat', sans-serif;
 .solucao-icons{
     font-size: 1rem;
     margin-top: .15rem;
+}
+
+
+.sobre-saiba{
+    margin-top: 8rem;
+}
+
+.sobre-saiba h3{
+    line-height: 1;
+    margin-bottom: 3rem;
+    text-align: center;
+    font-family: $font-poppins;
+    font-size: 1.8em;
+}
+
+.sobre-saiba-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 300px;
+    
+    
+}
+
+.saiba-text{
+    margin-right: 4rem;
+    width: 100%;
+}
+
+.saiba-text p{
+    margin: 1rem 0 3rem;
+    font-size: 1.3em;
+    text-align: center;
+    font-family: $font-montserrat;
+}
+
+
+
+.img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.saiba-img{
+    width: 30%;
+    height: 50%;
+    border-radius: 60%;
+}
+
+.saiba-categorias{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1.2rem;
+}
+
+.categorias-card{
+    background: $orange-light;
+    padding: 2rem;
+    border-radius: 2rem;
+    height: 105%;
+    transition: (--transition);
+    color: $white;
+
+
+    &:hover{
+        box-shadow: 0 3rem 3rem rgba(0,0,0,0.3);
+        z-index: 1;
+    }
+}
+
+.categorias-card h4{
+    margin: 1rem 0 1.1rem;
+    font-size: 1.2rem;
+    font-family: $font-montserrat
+}
+
+.categorias-card p{
+    font-size: 0.85rem;
+    font-family: monospace;
+}
+
+.categorias-icon{
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+    font-size: 280%;
+
 }
