--- a/src/app/sobre/sobre.scss
+++ b/src/app/sobre/sobre.scss
@@ -5,6 +5,7 @@ $orange: #FF5C00;
 $orange-light: #EC8F5E;
 $blue:#183E9F;
 $white: white;
+$white-light: #dedede;
 $dark: #1e1c2a;
 $font-poppins:'Poppins', sans-serif;
 $font-montserrat: 'Montserrat', sans-serif;
@@ -73,6 +74,59 @@ $font-montserrat: 'Montserrat', sans-serif;
 .destaques-icon span{
     font-size: 280%;
 }
+
+.missoes-valores{
+    margin-top: 8rem;
+}
+
+.missoes-valores-container{
+    background: $orange;
+    padding: 3rem 2rem 2rem;
+    border-radius: 1rem;
+}
+
+.missoes-valores-title{
+    text-align: center;
+    color: $white;
+    font-family: $font-poppins;
+    font-size: 2.5rem;
+}
+
+.container-card{
+    display: flex;
+    gap: 2rem;
+    padding-top: 1rem;
+}
+
+.missoes-valores-card{
+    background: $white;
+    padding: 2.5rem 3rem 2rem 1.5rem;
+    border-radius: 1em;
+}
+
+.number-valores-missoes-card{
+    display: inline-block;
+    background: $orange;
+    color: $white;
+    padding: .5rem .75rem;
+    border-radius: .25rem;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    transition: .3s;
+}
+
+
+.valores-missoes-title{
+    font-size: 1.5rem;
+    font-family: $font-montserrat;
+    margin-bottom: 1rem;
+}
+
+.valores-missoes-descricao{
+    font-size: 1rem;
+    font-family: monospace;
+}
+
 
 
 /*Responsividade*/
