--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -66,7 +66,7 @@ $font-montserrat: 'Montserrat', sans-serif;
     background: $orange;
     border-radius: 20px;
     box-shadow: 0px -10px 40px rgba(0,0,0,0.3);
-    gap: 2rem;
+    gap: 1.5rem;
 }
 
 .login-card > h2{
@@ -101,6 +101,7 @@ $font-montserrat: 'Montserrat', sans-serif;
     color: $white;
     margin-bottom: 10px;
     font-size: 1.2em;
+    font-family: $font-montserrat;
 }
 
 .login-input::placeholder{
@@ -121,4 +122,16 @@ $font-montserrat: 'Montserrat', sans-serif;
     letter-spacing: 3px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     box-shadow: 0px 10px 40px -12px #ccc;
+}
+
+.cadastre-se{
+    color: $white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1em;
+}
+
+.cadastre-se a{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: underline;
+    color: #dedede;
 }
