Add responsidade em page cadastro

--- a/src/app/cadastro/cadastro.scss
+++ b/src/app/cadastro/cadastro.scss
@@ -1,24 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@500&display=swap");
 
-
-$orange: #FF5C00;
-$orange-light: #EC8F5E;
-$blue:#183E9F;
+$orange: #ff5c00;
+$orange-light: #ec8f5e;
+$blue: #183e9f;
 $white: white;
 $white-light: #dedede;
 $caixa-login: #ffa570;
 $dark: #1e1c2a;
-$font-poppins:'Poppins', sans-serif;
-$font-montserrat: 'Montserrat', sans-serif;
+$font-poppins: "Poppins", sans-serif;
+$font-montserrat: "Montserrat", sans-serif;
 
-
-.main-cadastro{
+.main-cadastro {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cadastro{
+.cadastro {
     width: 1024px;
     padding: 5rem 0 0 0;
     display: flex;
@@ -26,65 +24,57 @@ $font-montserrat: 'Montserrat', sans-serif;
     align-items: center;
 }
 
-
 .cadastro-img {
     width: 80%;
     display: flex;
     align-items: center;
     padding: 20px;
     border-radius: 20px 0 0 20px;
-
 }
 
-.cadastro-img img{
+.cadastro-img img {
     width: 100%;
 }
 
-.cadastro-box{
+.cadastro-box {
     font-family: $font-montserrat;
     padding: 30px 40px;
     width: 80%;
     border-radius: 0 20px 20px 0;
     background-color: $orange;
-    
 }
 
-.cadastro-box h2{
+.cadastro-box h2 {
     font-family: $font-poppins;
     font-size: 30px;
     color: $white;
-    
 }
 
-.cadastro-box p{
+.cadastro-box p {
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: $white;
     margin-bottom: 2rem;
 }
 
-.cadastro-box p a{
+.cadastro-box p a {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: $white-light;
     text-decoration: none;
 }
 
-
-
-form .input-group{
-
+form .input-group {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
 
-
-form .cadastro-input{
+form .cadastro-input {
     margin-bottom: 15px;
 }
 
-form .cadastro-input label{
+form .cadastro-input label {
     color: $white;
     font-weight: bold;
     display: block;
@@ -92,7 +82,8 @@ form .cadastro-input label{
     font-family: $font-montserrat;
 }
 
-form .cadastro-input input,select{
+form .cadastro-input input,
+select {
     width: 250px;
     height: 50px;
     background: $white;
@@ -105,13 +96,11 @@ form .cadastro-input input,select{
     transition: all 0.4s ease;
 }
 
-
-
-form .cadastro-input input:focus{
+form .cadastro-input input:focus {
     border: $orange;
 }
 
-form .cadastro-input .p-dispositivo{
+form .cadastro-input .p-dispositivo {
     margin-bottom: 0;
     font-weight: none;
     font-family: monospace;
@@ -119,17 +108,14 @@ form .cadastro-input .p-dispositivo{
     margin-top: 3px;
 }
 
-form .cadastro-btn{
+form .cadastro-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-form .cadastro-btn button{
-    
+form .cadastro-btn button {
     width: 70%;
-
     height: 47px;
     background-color: $white;
     color: $orange;
@@ -141,4 +127,50 @@ form .cadastro-btn button{
     font-size: 1.2em;
     text-transform: uppercase;
     font-weight: 800;
+}
+
+
+// Responsividade
+
+// Dispositivos maiores
+@media (max-width: 1200px) {
+  
+    .cadastro {
+      width: 900px;
+    }
+}
+
+// Dispositivos medios
+@media (max-width: 930px) {
+    .cadastro-img {
+        display: none;
+    }
+
+    .cadastro {
+        width: 700px;
+    }
+
+    .cadastro-box {
+        width: 100%;
+        border-radius: 20px;
+    }
+}
+
+// Dispositivos Pequenos
+@media (max-width: 500px) {
+
+    .cadastro .cadastro-box .input-group .cadastro-input{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+
+
+    .cadastro-box {
+        width: 80%;
+        border-radius: 20px;
+    }
+
+
 }
