--- a/src/app/sobre/sobre.scss
+++ b/src/app/sobre/sobre.scss
@@ -154,7 +154,7 @@ $font-montserrat: 'Montserrat', sans-serif;
     }
 }
 
-// Dispositivos menores
+// Dispositivos medios
 @media only screen and (max-width: 950px){
 
     .missoes-valores{
