add  encerrando sessao com sessionStorage

--- a/src/app/portalcliente/portalcliente.scss
+++ b/src/app/portalcliente/portalcliente.scss
@@ -73,6 +73,11 @@ $font-montserrat: 'Montserrat', sans-serif;
     }
 }
 
+.opn-cliente .opcoes a{
+    color: $dark;
+
+}
+
 .opn-cliente .opcoes li .icon{
     width: 80px;
     height: 80px;
