add metodo GET + POST em dispositivo

--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -137,6 +137,10 @@ $font-montserrat: 'Montserrat', sans-serif;
     color: #dedede;
 }
 
+.erro-login{
+    color: $white;
+}
+
 // Responsividade
 
 // Dispositivos maiores
