--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -88,6 +88,13 @@ main {
     padding: 8%;
 }
 
+.input-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
 // Rodape
 .rodape {
     display: flex;
@@ -121,6 +128,7 @@ main {
 .rodape .repositorio-github p span {
     font-size: 30px;
 }
+
 
 // Responsividade
 
