--- a/src/app/portalcliente/opcoes.scss
+++ b/src/app/portalcliente/opcoes.scss
@@ -15,8 +15,8 @@ $font-montserrat: 'Montserrat', sans-serif;
 
 
 
-.dispositivo-visualizar, .cuidador-visualizar, .emergencia-visualizar, .manutencao-visualizar{
-    width: 1024px;
+.dispositivo-visualizar, .cuidador-visualizar, .emergencia-visualizar, .manutencao-visualizar, .diagnostico-visualizar{
+    width: 930px;
     padding: 5rem 0 0 10rem;
     display: flex;
     justify-content: center;
@@ -34,23 +34,24 @@ $font-montserrat: 'Montserrat', sans-serif;
     gap: 5rem;
 }
 
-.dispositivo-img > h2, .cuidador-img > h2, .emergencia-img > h2, .manutencao-img > h2{
+.dispositivo-img > h2, .cuidador-img > h2, .emergencia-img > h2, .manutencao-img > h2, 
+.diagnostico-img > h2{
     font-family: $font-poppins;
     text-align: center;
     color: $orange;
 }
 
-.dispositivo-img, .cuidador-img, .emergencia-img, .manutencao-img{
+.dispositivo-img, .cuidador-img, .emergencia-img, .manutencao-img, .diagnostico-img{
     width: 90%;
     padding: 0 0 0 8rem;
 }
 
-.dispositivo-img img, .cuidador-img img, .emergencia-img img, .manutencao-img img{
+.dispositivo-img img, .cuidador-img img, .emergencia-img img, .manutencao-img img, .diagnostico-img img{
     width: 400px;
 }
 
 table{
-    width: 58vw;
+    width: -50vw;
     min-height: 20vh;
     background: $white-light;
     box-shadow: 0 .4rem .8rem #0005;
@@ -63,8 +64,6 @@ table th,td{
 
 }
 
-
-
 thead th{
     position: sticky;
     font-family: $font-montserrat;
@@ -73,9 +72,6 @@ thead th{
     border-radius: .8rem ;
     color: $white;
 }
-
-
-
 
 
 .dispositivo-box, .cuidador-box{
