--- a/src/app/portalcliente/opcoes.scss
+++ b/src/app/portalcliente/opcoes.scss
@@ -51,7 +51,7 @@ $font-montserrat: 'Montserrat', sans-serif;
 }
 
 table{
-    width: -50vw;
+    width: 50vw;
     min-height: 20vh;
     background: $white-light;
     box-shadow: 0 .4rem .8rem #0005;
@@ -142,3 +142,15 @@ select {
 }
 
 
+ .btn-metodo {
+    background-color: $orange-light;
+    margin-left: 20px;
+    padding: 5px;
+    color: $white;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    margin-top: 15px;
+    cursor: pointer;
+    font-weight: 800;
+}
