Add metodo PUT em cliente

--- a/src/app/portalcliente/opcoes.scss
+++ b/src/app/portalcliente/opcoes.scss
@@ -179,10 +179,12 @@ select {
 .atualizar-container .dados-atuais {
     text-align: center;
     height: 45vh;
+    width: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 0.9rem;
 }
 
 .atualizar-container .atualizar-box{
@@ -204,10 +206,12 @@ select {
    justify-content: center;
     margin-bottom: 1rem;
     margin-bottom: 15px;
+    gap: 1rem
 }
 
 .atualizar-container .dados-atuais .dado-atual .dado {
 
+    width: 10rem;
     span {
         font-weight: bold;
         font-family: $font-montserrat;
@@ -215,12 +219,13 @@ select {
         color: $white;
         padding: 10px;
         border-radius: 15px;
+        min-height: 41px
     }
 
     p {
         margin-left: 1rem;
         font-family: monospace;
-        min-height: 45px;
+        min-height: 41px;
         font-size: 1.2rem;
         padding: 10px;
     }
